<resources>
    <string name="app_name">BabyCare</string>
    <string name="action_settings">Settings</string>
    <string name="placeholder_query_input">What do you feel like eating?</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>
    <string name="feeling_lucky">I\'m Feeling Lucky</string>
    <string name="home">Home</string>
    <string name="my_recipes">My recipes</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="people">People</string>
    <string name="others">Others</string>
    <string name="settings">Settings</string>
    <string name="help_and_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="rejasupotaro">rejasupotaro</string>
    <string name="buru">哺乳</string>
    <string name="dabian">大便</string>
    <string name="xiaobian">小便</string>
    <string name="weiyang">喂养</string>
    <string name="zh_others">其他</string>
    <string name="huangdan">黄疸</string>
    <string name="time_unknown">--:--</string>
    <string name="value_unknown">-</string>
    <string name="timer_init">00:00:00</string>
    <string name="dialog_title_buru">添加哺乳记录</string>
    <string name="dialog_error_time_range">请填写正确的日期，开始时间和结束时间, 如日期20160917，时间12:03</string>
    <string name="dialog_error_time_field">请填写正确的日期和时间, 如日期20160917，时间12:03</string>
    <string name="softy_soft">稀松</string>
    <string name="softy_hard">干硬</string>
    <string name="softy_appropriate">适中</string>

    <string name="quantity_few">少量</string>
    <string name="quantity_lot">大量</string>
    <string name="quantity_appropriate">适中</string>
</resources>
