<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/spacing_medium"
    android:layout_marginLeft="@dimen/spacing_medium"
    android:layout_marginRight="@dimen/spacing_medium">

  <LinearLayout
      style="@style/Widget.CardContent"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_xsmall"
        android:layout_gravity="start|center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/spacing_xsmall"
        android:background="@color/blue"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/spacing_medium"
          android:text="日期"
          />
      <EditText
          android:id="@+id/day"
          android:layout_width="match_parent"
          android:layout_marginEnd="@dimen/spacing_xlarge"
          android:layout_height="wrap_content">
      </EditText>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/spacing_medium"
          android:text="时间"
          />
      <EditText
          android:id="@+id/time"
          android:layout_width="match_parent"
          android:layout_marginEnd="@dimen/spacing_xlarge"
          android:layout_height="wrap_content">
      </EditText>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/spacing_medium"
          android:layout_gravity="center_vertical"
          android:text="颜色"
          />
      <RadioGroup
          android:id="@+id/color"
          android:orientation="horizontal"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          >
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
          <RadioButton
              android:id="@+id/black"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              />
          <View
              style="@style/ColText.colorBlock"
              android:background="@color/black"
              />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_medium"
            >
          <RadioButton
              android:id="@+id/green"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginEnd="@dimen/spacing_xsmall"
              />
          <View
              style="@style/ColText.colorBlock"
              android:background="@color/green"
              />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_medium"
            >
          <RadioButton
              android:id="@+id/yellow"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginEnd="@dimen/spacing_xsmall"
              android:checked="true"
              />
          <View
              style="@style/ColText.colorBlock"
              android:background="@color/yellow"
              />
        </LinearLayout>
      </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/spacing_medium"
          android:text="软硬"
          />
      <RadioGroup
          android:id="@+id/softy"
          android:orientation="horizontal"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/softy_soft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:text="@string/softy_soft"
            />
        <RadioButton
            android:id="@+id/softy_appropriate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:checked="true"
            android:text="@string/softy_appropriate"
            />
        <RadioButton
            android:id="@+id/softy_hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/softy_hard"
            />
      </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/spacing_medium"
          android:text="数量"
          />
      <RadioGroup
          android:id="@+id/quantity"
          android:orientation="horizontal"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/quantity_few"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:text="@string/quantity_few"
            />
        <RadioButton
            android:id="@+id/quantity_appropriate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:checked="true"
            android:text="@string/quantity_appropriate"
            />
        <RadioButton
            android:id="@+id/quantity_lot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity_lot"
            />
      </RadioGroup>

    </LinearLayout>

    <TextView
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="@dimen/text_size_xsmall"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
      <ImageButton
          android:id="@+id/save"
          android:layout_width="32dp"
          android:layout_height="32dp"
          android:background="@drawable/border"
          android:layout_marginStart="@dimen/spacing_xlarge"
          android:layout_marginTop="@dimen/spacing_medium"
          android:layout_marginBottom="@dimen/spacing_medium"
          android:layout_alignParentStart="true"
          android:scaleType="centerInside"
          android:src="@drawable/ic_action_tick"
          />
      <ImageButton
          android:id="@+id/cancel"
          android:layout_width="32dp"
          android:layout_height="32dp"
          android:background="@drawable/border"
          android:layout_marginEnd="@dimen/spacing_xlarge"
          android:layout_marginTop="@dimen/spacing_medium"
          android:layout_marginBottom="@dimen/spacing_medium"
          android:layout_alignParentEnd="true"
          android:scaleType="centerInside"
          android:src="@drawable/ic_action_cancel"
          />
    </RelativeLayout>

  </LinearLayout>

</android.support.v7.widget.CardView>
